--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -117,7 +117,7 @@ server {
     }
 
     location ~ ^/(app_dev|config)\.php(/|$) {
-        fastcgi_pass fpm:9000;
+        fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
 
@@ -147,7 +147,7 @@ server {
     }
 
     location ~ ^/app\.php(/|$) {
-        fastcgi_pass fpm:9000;
+        fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
 
