fixed setup scripts for sf 4

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -95,7 +95,7 @@ server {
     }
 
     location / {
-        try_files $uri /app.php$is_args$args;
+        try_files $uri /index.php$is_args$args;
     }
 
     location /__status {
@@ -116,37 +116,7 @@ server {
         log_not_found off;
     }
 
-    location ~ ^/(app_dev|config)\.php(/|$) {
-        fastcgi_pass php:9000;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
-
-        # Buffer Settings [https://tweaked.io/guide/nginx/]
-        fastcgi_buffer_size 128k;
-        fastcgi_buffers 4 256k;
-        fastcgi_busy_buffers_size 256k;
-        fastcgi_temp_file_write_size 256k;
-
-        # FastCGI Config
-        fastcgi_cache API;
-        fastcgi_cache_valid 200 3s;
-        fastcgi_cache_revalidate on;
-        fastcgi_cache_lock on;
-        fastcgi_cache_methods GET HEAD;
-        fastcgi_cache_use_stale updating error timeout invalid_header http_500;
-        fastcgi_cache_bypass $http_cache_control;
-        add_header X-FastCGI-Cache $upstream_cache_status;
-
-        # Params (removed duplicates already found in [fastcgi_params] left those which are modified)
-        include /etc/nginx/fastcgi_params;
-        fastcgi_param HTTPS              $fastcgi_https;
-        fastcgi_param SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-    }
-
-    location ~ ^/app\.php(/|$) {
+    location ~ ^/index\.php(/|$) {
         fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
