--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -4,10 +4,12 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "symfony/browser-kit": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/phpunit-bridge": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
