--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -4,16 +4,20 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "friendsofsymfony/rest-bundle": "^2.3",
         "symfony/browser-kit": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/phpunit-bridge": "^4.0",
+        "symfony/serializer-pack": "^1.0",
+        "symfony/translation": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "symfony/dotenv": "^4.0",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
