--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "eightpoints/guzzle-bundle": "^7.2",
         "friendsofsymfony/rest-bundle": "^2.3",
+        "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.0",
         "symfony/browser-kit": "^4.0",
         "symfony/console": "^4.0",
@@ -17,6 +18,7 @@
         "symfony/phpunit-bridge": "^4.0",
         "symfony/serializer-pack": "^1.0",
         "symfony/translation": "^4.0",
+        "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
