--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "eightpoints/guzzle-bundle": "^7.2",
         "friendsofsymfony/rest-bundle": "^2.5",
         "sensio/framework-extra-bundle": "^5.1",
