--- a/Symfony/config/services.yaml
+++ b/Symfony/config/services.yaml
@@ -34,12 +34,11 @@ services:
             - "@logger"
             - 1.1
 
-    App\Service\AwsProductApi:
+    App\Service\Apa\ProductApi:
         arguments:
             $api: '@eight_points_guzzle.client.aws_webservice'
             $aws_access_key_id: '%env(AWS_ACCESS_KEY_ID)%'
             $aws_secret_access_key: '%env(AWS_SECRET_ACCESS_KEY)%'
             $aws_associate_tag: '%env(AWS_ASSOCIATE_TAG)%'
             $delayProvider: "@aws_delayfish"
-
 
