--- a/Symfony/config/services_test.yaml
+++ b/Symfony/config/services_test.yaml
@@ -9,3 +9,4 @@ services:
     # test.App\Service\MyService: '@App\Service\MyService'
 
     test.App\Service\BookParser: '@App\Service\BookParser'
+    test.App\Service\Apa\ProductParser: '@App\Service\Apa\ProductParser'
