--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "eightpoints/guzzle-bundle": "^7.2",
+        "ezyang/htmlpurifier": "^4.10",
         "friendsofsymfony/rest-bundle": "^2.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.0",
