--- a/Symfony/config/services_test.yaml
+++ b/Symfony/config/services_test.yaml
@@ -8,9 +8,9 @@ services:
     #
     # test.App\Service\MyService: '@App\Service\MyService'
 
+    test.App\Service\Apa\Broker: '@App\Service\Apa\Broker'
     test.App\Service\Apa\ProductParser: '@App\Service\Apa\ProductParser'
+    test.App\Service\Data\EditionLeadPicker: '@App\Service\Data\EditionLeadPicker'
     test.App\Service\Data\FrontFinder: '@App\Service\Data\FrontFinder'
     test.App\Service\Data\WorkGroomer: '@App\Service\Data\WorkGroomer'
     test.App\Service\EditionManager: '@App\Service\EditionManager'
-    test.App\Service\LeadManager: '@App\Service\LeadManager'
-    test.App\Service\Apa\Broker: '@App\Service\Apa\Broker'
