--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -8,6 +8,7 @@
         "eightpoints/guzzle-bundle": "^7.2",
         "ezyang/htmlpurifier": "^4.10",
         "friendsofsymfony/rest-bundle": "^2.5",
+        "misterion/ko-process": "^0.5.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.0",
         "symfony/browser-kit": "^4.0",
