--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -8,6 +8,7 @@
         "eightpoints/guzzle-bundle": "^7.2",
         "ezyang/htmlpurifier": "^4.10",
         "friendsofsymfony/rest-bundle": "^2.5",
+        "friendsofsymfony/user-bundle": "^2.1",
         "misterion/ko-process": "^0.5.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.0",
@@ -19,14 +20,16 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/orm-pack": "^1.0",
         "symfony/phpunit-bridge": "^4.0",
+        "symfony/profiler-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/dotenv": "^4.0"
     },
     "config": {
         "preferred-install": {
