--- a/developer/config.sh.dist
+++ b/developer/config.sh.dist
@@ -1,3 +1,5 @@
+export MYSQL_BINLOG_PATH=/var/www/html/newstash/data/mysql-binlog/
+
 export AWS_REGION=us-east-1
 export AWS_ACCESS_KEY_ID=
 export AWS_SECRET_ACCESS_KEY=
