--- a/data/conf.d/server.cnf
+++ b/data/conf.d/server.cnf
@@ -5,3 +5,6 @@ default_authentication_plugin=mysql_native_password
 expire_logs_days = 1
 
 log_bin = /var/lib/mysql-binlogs/binlog
+
+# this buffers log writes for performance
+innodb_flush_log_at_trx_commit = 2
