--- a/Symfony/config/services.yaml
+++ b/Symfony/config/services.yaml
@@ -44,3 +44,9 @@ services:
             $aws_associate_tag: '%env(AWS_ASSOCIATE_TAG)%'
             $delayProvider: "@aws_delayfish"
 
+    App\Service\Auth\NewstashUserProvider:
+        arguments:
+            $userManager: '@fos_user.user_manager'
+            $properties: {facebook: 'foo', google: 'bar'}
+
+
