--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -26,7 +26,11 @@
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0",
-        "twig/extensions": "^1.5"
+        "twig/extensions": "^1.5",
+        "hwi/oauth-bundle": "^0.6.3",
+        "php-http/guzzle6-adapter": "~1.1.1",
+        "php-http/httplug-bundle": "~1.13"
+
     },
     "require-dev": {
         "symfony/dotenv": "^4.0"
