--- a/developer/config.sh.dist
+++ b/developer/config.sh.dist
@@ -1,5 +1,6 @@
 export MYSQL_DATA_PATH=/var/www/html/newstash/data/mysql/
 export MYSQL_BINLOG_PATH=/var/www/html/newstash/data/mysql-binlog/
+export APP_PORT=80
 
 export AWS_REGION=us-east-1
 export AWS_ACCESS_KEY_ID=
