paramterized db_url

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -30,6 +30,7 @@ services:
             APP_ENV: dev
             APP_SECRET: devsecretdevsecretdevsecret
             DATABASE_URL: "mysql://bookstash:bookstash@mysql:3306/bookstash"
+            DATABASE_URL: "${DATABASE_URL}"
 
             AWS_REGION: "${AWS_REGION}"
             AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
