--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -4,7 +4,9 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "alcaeus/mongo-php-adapter": "^1.1",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "doctrine/mongodb-odm-bundle": "^3.5",
         "eightpoints/guzzle-bundle": "^7.2",
         "ezyang/htmlpurifier": "^4.10",
         "friendsofsymfony/rest-bundle": "^2.5",
