less, js started

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -87,6 +87,10 @@ server {
         # expires 60s;
     }
 
+    location ~ \.svgz$ {
+        add_header Content-Encoding gzip;
+    }
+
     location ~* \.(js|css)$ {
         # expires 60s;
         gzip_min_length 1100;
