--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -32,6 +32,7 @@
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
+        "symfony/webpack-encore-bundle": "^1.1",
         "symfony/yaml": "^4.0",
         "twig/extensions": "^1.5"
     },
