controller and front end migration

--- a/Symfony/config/services_test.yaml
+++ b/Symfony/config/services_test.yaml
@@ -15,7 +15,9 @@ services:
     test.App\Service\Data\FrontFinder: '@App\Service\Data\FrontFinder'
     test.App\Service\Data\WorkGroomer: '@App\Service\Data\WorkGroomer'
     test.App\Service\EditionManager: '@App\Service\EditionManager'
+    test.App\Service\Export: '@App\Service\Export'
     test.App\Service\Export\BrowseNode: '@App\Service\Export\BrowseNode'
     test.App\Service\Export\Work: '@App\Service\Export\Work'
-    test.App\Service\Mongo\BrowseNode: '@App\Service\Mongo\BrowseNode'
     test.App\Service\Mongo: '@App\Service\Mongo'
+    test.App\Service\Mongo\BrowseNode: '@App\Service\Mongo\BrowseNode'
+    test.App\Service\Mongo\Work: '@App\Service\Mongo\Work'
