--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,6 +29,8 @@ services:
             MONGODB_URL: "${MONGODB_URL}"
             MONGODB_DB: "${MONGODB_DB}"
 
+            MAILER_URL: "${MAILER_URL}"
+
             APP_ENV: dev
             APP_SECRET: devsecretdevsecretdevsecret
             DATABASE_URL: "mysql://bookstash:bookstash@mysql:3306/bookstash"
