--- a/developer/config.sh.dist
+++ b/developer/config.sh.dist
@@ -1,3 +1,5 @@
+export MAILER_URL=gmail://scott.r.lindsey:password@localhost
+
 export MONGODB_URL=mongodb://mongo:27017
 export MONGODB_DB=newstash
 
