--- a/Symfony/config/packages/hwi_oauth.yaml
+++ b/Symfony/config/packages/hwi_oauth.yaml
@@ -6,8 +6,8 @@ hwi_oauth:
     resource_owners:
         facebook:
             type:                facebook
-            client_id:           '%env(FB_ID)%'
-            client_secret:       '%env(FB_SECRET)%'
+            client_id:           '%env(FACEBOOK_APP_ID)%'
+            client_secret:       '%env(FACEBOOK_SECRET)%'
             scope:               "email"
             options:
                 display: popup
