--- a/Symfony/config/routes.yaml
+++ b/Symfony/config/routes.yaml
@@ -1,3 +1,9 @@
 #index:
 #    path: /
 #    defaults: { _controller: 'App\Controller\DefaultController::index' }
+
+facebook_login:
+    path: /login/check-facebook
+
+google_login:
+    path: /login/check-google
