--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -57,6 +57,7 @@ services:
             AWS_ASSOCIATE_TAG: "${AWS_ASSOCIATE_TAG}"
 
             FACEBOOK_APP_ID: "${FACEBOOK_APP_ID}"
+            FACEBOOK_SECRET: "${FACEBOOK_SECRET}"
             GOOGLE_API_KEY: "${GOOGLE_API_KEY}"
             GOOGLE_APP_ID: "${GOOGLE_APP_ID}"
             GAQ_ID: "${GAQ_ID}"
