--- a/Symfony/config/packages/twig.yaml
+++ b/Symfony/config/packages/twig.yaml
@@ -5,8 +5,7 @@ twig:
 
     globals:
         facebook_app_id: '%env(resolve:FACEBOOK_APP_ID)%'
-        google_api_key: '%env(resolve:GOOGLE_API_KEY)%'
-        google_app_id: '%env(resolve:GOOGLE_APP_ID)%'
+        google_client_id: '%env(resolve:GOOGLE_CLIENT_ID)%'
         gaq_id: '%env(resolve:GAQ_ID)%'
         amzn_affiliate: '%env(resolve:AMZN_AFFILIATE)%'
 
