--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -58,8 +58,8 @@ services:
 
             FACEBOOK_APP_ID: "${FACEBOOK_APP_ID}"
             FACEBOOK_SECRET: "${FACEBOOK_SECRET}"
-            GOOGLE_API_KEY: "${GOOGLE_API_KEY}"
-            GOOGLE_APP_ID: "${GOOGLE_APP_ID}"
+            GOOGLE_CLIENT_ID: "${GOOGLE_CLIENT_ID}"
+            GOOGLE_CLIENT_SECRET: "${GOOGLE_CLIENT_SECRET}"
             GAQ_ID: "${GAQ_ID}"
             AMZN_AFFILIATE: "${AMZN_AFFILIATE}"
 
