new repos, managers

--- a/Symfony/config/services_test.yaml
+++ b/Symfony/config/services_test.yaml
@@ -15,6 +15,11 @@ services:
     test.App\Service\Data\FrontFinder: '@App\Service\Data\FrontFinder'
     test.App\Service\Data\WorkGroomer: '@App\Service\Data\WorkGroomer'
     test.App\Service\EditionManager: '@App\Service\EditionManager'
+    test.App\Service\ReviewManager: '@App\Service\ReviewManager'
+    test.App\Service\RatingManager: '@App\Service\RatingManager'
+    test.App\Service\ScoreManager: '@App\Service\ScoreManager'
+    test.App\Service\ReviewLikeManager: '@App\Service\ReviewLikeManager'
+    test.App\Service\ReaditManager: '@App\Service\ReaditManager'
     test.App\Service\Export: '@App\Service\Export'
     test.App\Service\Export\BrowseNode: '@App\Service\Export\BrowseNode'
     test.App\Service\Export\Work: '@App\Service\Export\Work'
