fixed api error response as json

--- a/Symfony/config/packages/security.yaml
+++ b/Symfony/config/packages/security.yaml
@@ -14,6 +14,22 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        user:
+
+            # FOS REST handling of access denied exceptions is BROKEN
+            # https://github.com/FriendsOfSymfony/FOSRestBundle/issues/1538
+
+            pattern: ^/user/
+
+            form_login:
+                provider: fos_userbundle
+                csrf_token_generator: security.csrf.token_manager
+                check_path: /user/notused
+                use_forward: true
+
+            context: the_security_context
+
         main:
             pattern: ^/
             form_login:
@@ -36,6 +52,8 @@ security:
                 oauth_user_provider:
                     service: App\Service\Auth\NewstashUserProvider
 
+            context: the_security_context
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
@@ -43,3 +61,4 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/user/, role: ROLE_USER }
