--- a/Symfony/config/services.yaml
+++ b/Symfony/config/services.yaml
@@ -30,6 +30,12 @@ services:
         tags: ['controller.service_arguments']
 
 
+    Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler:
+        arguments:
+            - !service { class: PDO, factory: 'database_connection:getWrappedConnection' }
+            - { db_table: 'sessions' }
+
+
     # -------------------------------------------------------------------------
 
     aws_delayfish:
