--- a/Symfony/config/services_test.yaml
+++ b/Symfony/config/services_test.yaml
@@ -11,20 +11,21 @@ services:
     test.App\Service\Apa\Broker: '@App\Service\Apa\Broker'
     test.App\Service\Apa\ProductParser: '@App\Service\Apa\ProductParser'
     test.App\Service\Auth\NewstashUserProvider: '@App\Service\Auth\NewstashUserProvider'
+    test.App\Service\CommentManager: '@App\Service\CommentManager'
     test.App\Service\Data\EditionLeadPicker: '@App\Service\Data\EditionLeadPicker'
     test.App\Service\Data\FrontFinder: '@App\Service\Data\FrontFinder'
     test.App\Service\Data\WorkGroomer: '@App\Service\Data\WorkGroomer'
     test.App\Service\EditionManager: '@App\Service\EditionManager'
-    test.App\Service\ReviewManager: '@App\Service\ReviewManager'
-    test.App\Service\RatingManager: '@App\Service\RatingManager'
-    test.App\Service\PostManager: '@App\Service\PostManager'
-    test.App\Service\ScoreManager: '@App\Service\ScoreManager'
-    test.App\Service\ReviewLikeManager: '@App\Service\ReviewLikeManager'
-    test.App\Service\ReaditManager: '@App\Service\ReaditManager'
     test.App\Service\Export: '@App\Service\Export'
     test.App\Service\Export\BrowseNode: '@App\Service\Export\BrowseNode'
     test.App\Service\Export\Work: '@App\Service\Export\Work'
     test.App\Service\Mongo: '@App\Service\Mongo'
     test.App\Service\Mongo\BrowseNode: '@App\Service\Mongo\BrowseNode'
-    test.App\Service\Mongo\Work: '@App\Service\Mongo\Work'
     test.App\Service\Mongo\News: '@App\Service\Mongo\News'
+    test.App\Service\Mongo\Work: '@App\Service\Mongo\Work'
+    test.App\Service\PostManager: '@App\Service\PostManager'
+    test.App\Service\RatingManager: '@App\Service\RatingManager'
+    test.App\Service\ReaditManager: '@App\Service\ReaditManager'
+    test.App\Service\ReviewLikeManager: '@App\Service\ReviewLikeManager'
+    test.App\Service\ReviewManager: '@App\Service\ReviewManager'
+    test.App\Service\ScoreManager: '@App\Service\ScoreManager'
