--- a/Symfony/config/packages/security.yaml
+++ b/Symfony/config/packages/security.yaml
@@ -45,3 +45,4 @@ security:
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/user/, role: ROLE_USER }
+        - { path: ^/blog/comment/, role: ROLE_USER }
