--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,49 @@
 
 defaults: &job-defaults
   docker:
-    - image: circleci/php:7.3-fpm-node-browsers-legacy 
+    - image: circleci/php:7.3-fpm-node-browsers-legacy
 
 jobs:
+    # ---------> BUILD <---------
     build:
         <<: *job-defaults
 
         steps:
             - checkout
             - run: 'echo "what up!"'
+
+
+    # ---------> TEST <---------
+    test:
+        <<: *job-defaults
+
+        steps:
+            - setup_remote_docker:
+                docker_layer_caching: true
+            - checkout
+                - run: 'echo "what up!"'
+
+
+
+
+
+# -----------------------------------------------------------------------------
+workflows:
+  version: 2
+
+
+
+
+  # ---------------------------------------------------------------------------
+  # test only path for random commits
+  commit_test:
+    jobs:
+
+    - build:
+        filters:
+          branches:
+            only: /.*/
+    - test:
+        requires:
+        - build
+
